--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+
+
+spring.datasource.url = jdbc:h2:file:~/sprintBootData;AUTO_SERVER=TRUE;MODE=LEGACY;
+spring.sql.init.mode = always
+spring.h2.console.enabled = true
